# Machine-Learning-6-SIN-A-Mar-Jul-2026

./: .gitignore  Copia_de_Logistic_Regression.ipynb  README.md  loss.ipynb  main.py  pyproject.toml  workshop-Mateo-0.ipynb  workshop0.ipynb  workshop1.ipynb
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
Machine-Learning-6-SIN-A-Mar-Jul-2026-p2/Machine-Learning-6-SIN-A-Mar-Jul-2026-p2/notebooks/: main.ipynb
data/: wine_quality.csv
ml/cc/exercises/: linear_regression_taxi.ipynb
notebooks/: exam.ipynb  main.ipynb
src/: scale.py
