[project]
name = "ml-exam"
version = "0.1.0"
description = "Mid-term practical evaluation — linear & logistic regression"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0,<1.8.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
